fixed white space during manual scroll down & removed sticky plugin

--- a/_images.scss
+++ b/_images.scss
@@ -2,6 +2,8 @@
     background-image: url(MarvelImage.jpg);
     background-size: cover;
     background-attachment: fixed;
-    background-position: $default-center;
+    background-position: fixed;
+    top: 0;
+    
     
 }
